force-app/main/default/objects/b3d__Document_Trace__c/b3d__Document_Trace__c.object-meta.xml
<CustomObject>
    <label>Document Trace</label>
    <nameField>
        <displayFormat>DOC-T-{0}</displayFormat>
        <label>Document Trace Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Traces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>