force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Account__c.field-meta.xml
<CustomField>
    <fullName>b3d__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Document Traces</relationshipLabel>
    <relationshipName>Document_Traces</relationshipName>
    <type>Lookup</type>
</CustomField>