force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Browser__c.field-meta.xml
<CustomField>
    <fullName>b3d__Browser__c</fullName>
    <inlineHelpText>What browser was used to view the document?</inlineHelpText>
    <label>Browser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>