force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Completed_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>b3d__Completed_Document_Link__c</fullName>
    <formula>HYPERLINK(
&quot;/apex/b3d__GeneratedDocument?id=&quot;&amp; Id &amp; &quot;&amp;renderAs=&quot; &amp; TEXT(b3d__Render_As__c), 
&quot;Open &quot; &amp; TEXT(b3d__Render_As__c), 
&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>View the completed document.</inlineHelpText>
    <label>Completed Document Link</label>
    <type>Text</type>
</CustomField>