force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Contact__c.field-meta.xml
<CustomField>
    <fullName>b3d__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Auto-identified from the Trace&apos;s Record Id</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Document Traces</relationshipLabel>
    <relationshipName>Document_Traces</relationshipName>
    <type>Lookup</type>
</CustomField>