force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Data_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>b3d__Data_Version_ID__c</fullName>
    <inlineHelpText>This is the Template&apos;s data file version ID used</inlineHelpText>
    <label>Data Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>