force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Device_Screen_Details__c.field-meta.xml
<CustomField>
    <fullName>b3d__Device_Screen_Details__c</fullName>
    <label>Device Screen Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>