force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Document_Downloaded__c.field-meta.xml
<CustomField>
    <fullName>b3d__Document_Downloaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether or not the user downloaded the document</inlineHelpText>
    <label>Document Downloaded</label>
    <type>Checkbox</type>
</CustomField>