force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Document_Successfully_Rendered__c.field-meta.xml
<CustomField>
    <fullName>b3d__Document_Successfully_Rendered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will be checked, once the document has fully rendered</inlineHelpText>
    <label>Document Successfully Rendered</label>
    <type>Checkbox</type>
</CustomField>