force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Dynamic_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>b3d__Dynamic_Document_Link__c</fullName>
    <formula>HYPERLINK(
&quot;/apex/page/Document?templateId=&quot;&amp; b3d__Template__c &amp; &quot;&amp;recordId=&quot;&amp; b3d__Record_ID__c &amp; IF(NOT(ISBLANK(b3d__Data_Version_ID__c)), (&quot;&amp;versionId=&quot;&amp; b3d__Data_Version_ID__c), &quot;&quot;), 
IF(NOT(ISBLANK(b3d__Data_Version_ID__c)), &quot;Versioned&quot;, &quot;Latest&quot;), 
&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dynamic Document Link</label>
    <type>Text</type>
</CustomField>