force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>b3d__Error_Message__c</fullName>
    <inlineHelpText>Any errors recorded during the processing of the document will be recorded here</inlineHelpText>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>