force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__First_Name__c.field-meta.xml
<CustomField>
    <fullName>b3d__First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>