force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Full_User_Agent__c.field-meta.xml
<CustomField>
    <fullName>b3d__Full_User_Agent__c</fullName>
    <label>Full User Agent</label>
    <type>TextArea</type>
</CustomField>