force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Has_Error__c.field-meta.xml
<CustomField>
    <fullName>b3d__Has_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether or not there was an error during rendering</inlineHelpText>
    <label>Has Error</label>
    <type>Checkbox</type>
</CustomField>