force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Operating_System__c.field-meta.xml
<CustomField>
    <fullName>b3d__Operating_System__c</fullName>
    <label>Operating System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>