force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Package_Version__c.field-meta.xml
<CustomField>
    <fullName>b3d__Package_Version__c</fullName>
    <inlineHelpText>App package version this document trace was created with</inlineHelpText>
    <label>Package Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>