force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Record_ID__c.field-meta.xml
<CustomField>
    <fullName>b3d__Record_ID__c</fullName>
    <inlineHelpText>This is the record id passed as URL parameter and used to pre-populate the document with Salesforce Data.</inlineHelpText>
    <label>Salesforce Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>