force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>b3d__Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>