force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Render_As__c.field-meta.xml
<CustomField>
    <fullName>b3d__Render_As__c</fullName>
    <inlineHelpText>Choose how to view the generated document.</inlineHelpText>
    <label>Render As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HTML</fullName>
                <default>true</default>
                <label>HTML</label>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>