force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Signature_BASE64__c.field-meta.xml
<CustomField>
    <fullName>b3d__Signature_BASE64__c</fullName>
    <label>Signature BASE64</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>