force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Signature_DATA__c.field-meta.xml
<CustomField>
    <fullName>b3d__Signature_DATA__c</fullName>
    <label>Signature DATA</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>