force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Status__c.field-meta.xml
<CustomField>
    <fullName>b3d__Status__c</fullName>
    <formula>IF(NOT(ISNULL(b3d__Rejected_Timestamp__c)), &apos;Rejected&apos;,if(b3d__Has_Error__c, &apos;Error&apos;,  if((b3d__Document_Signed__c &amp;&amp; b3d__Document_Downloaded__c), &apos;Signed &amp; Downloaded&apos;, if(b3d__Document_Signed__c, &apos;Signed&apos;, if(b3d__Document_Downloaded__c, &apos;Downloaded&apos;, if(b3d__Document_Successfully_Rendered__c, &apos;Viewed&apos;, &apos;Unknown&apos;))))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>