force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Template__c.field-meta.xml
<CustomField>
    <fullName>b3d__Template__c</fullName>
    <label>Template</label>
    <referenceTo>b3d__Template__c</referenceTo>
    <relationshipLabel>Document Traces</relationshipLabel>
    <relationshipName>Document_Traces</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>