force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__URL_Search_Params__c.field-meta.xml
<CustomField>
    <fullName>b3d__URL_Search_Params__c</fullName>
    <label>URL Search Params</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>