force-app/main/default/objects/b3d__Document_Trace__c/fields/b3d__Visitor_ID__c.field-meta.xml
<CustomField>
    <fullName>b3d__Visitor_ID__c</fullName>
    <inlineHelpText>A unique visitor ID fingerprint</inlineHelpText>
    <label>Visitor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>