force-app/main/default/objects/b3d__Document_Trace__c/fields/b3o__X3B_Application__c.field-meta.xml
<CustomField>
    <fullName>b3o__X3B_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3B Application</label>
    <referenceTo>b3o__Application__c</referenceTo>
    <relationshipLabel>Document Traces</relationshipLabel>
    <relationshipName>Document_Traces</relationshipName>
    <type>Lookup</type>
</CustomField>