force-app/main/default/objects/b3d__Document_Trace__c/listViews/b3d__All.listView-meta.xml
<ListView>
    <fullName>b3d__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>